force-app/main/default/objects/LLC_BI__Fee__c/fields/LLC_BI__TRID_Tolerances_Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TRID_Tolerances_Category__c</fullName>
    <description>Users manually populate this picklist to indicate the TRID tolerance category for a fee. By default, the picklist value is null.</description>
    <inlineHelpText>Select the TRID tolerance category for the fee.</inlineHelpText>
    <label>TRID Tolerances Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0% Tolerance</fullName>
            </value>
            <value>
                <fullName>10% Cumulative Tolerance</fullName>
            </value>
            <value>
                <fullName>Unlimited Tolerance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>