force-app/main/default/objects/LLC_BI__Fee__c/fields/Payee_Country__c.field-meta.xml
<CustomField>
    <fullName>Payee_Country__c</fullName>
    <label>Payee Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>