force-app/main/default/objects/LLC_BI__Fee__c/fields/Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Prepaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepaid</label>
    <type>Checkbox</type>
</CustomField>