force-app/main/default/objects/LLC_BI__Fee__c/recordTypes/LLC_BI__Adjustments.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Adjustments</fullName>
    <active>true</active>
    <description>Record Type for Adjustments Page Layout</description>
    <label>Adjustments</label>
</RecordType>