force-app/main/default/objects/LLC_BI__Fee__c/recordTypes/LLC_BI__Fees.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Fees</fullName>
    <active>true</active>
    <description>Record Type for Fees Page Layout</description>
    <label>Fees</label>
</RecordType>